# collmex-cli

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
collmex/: __init__.py  __main__.py  accounts.py  api.py  api_reference.py  booking.py  cli.py  controlling.py  datev.py  deadlines.py  dunning.py  gobd.py  models.py  reports.py  stammdaten.py  taxes.py  validation.py  webui.py
docs/: mkdocs.yml
docs/docs/api/: api-fields.md  api-patterns.md
mandant/beispiel/: profil.md
templates/: _regeln.yaml  abschreibung.yaml  ausgangsrechnung.yaml  eingangsrechnung.yaml  gehalt.yaml  storno.yaml
tests/: conftest.py  test_accounts.py  test_api.py  test_booking.py  test_cli.py  test_controlling.py  test_datev.py  test_deadlines.py  test_dunning.py  test_gobd.py  test_integration_live.py  test_models.py  test_reports.py  test_stammdaten.py  test_taxes.py  test_validation.py
wissen/: collmex-webui.md  interpretation.md  routinen.md  skr03.md  skr04.md
